--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "[![Actions Status](https://github.com/Kaonashi-IT/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Kaonashi-IT/frontend-project-44/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1" 
   },
   "author": "",
   "license": "ISC"
+}
+{
+  "type": "module",
 }
