--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "[![Actions Status](https://github.com/Kaonashi-IT/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/Kaonashi-IT/frontend-project-44/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1" 
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
-}
-{
+  "license": "ISC",
   "type": "module",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
